--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Title of My Final Project"
 description: |
-  “This is where I will describe my final project.”
+  This is where I will describe my final project.
 site: distill::distill_website
 ---
 
