--- a/index.Rmd
+++ b/index.Rmd
@@ -7,12 +7,29 @@ site: distill::distill_website
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-
+library(tidyverse)
+library(knitr)
 # Learn more about creating websites with Distill at:
 # https://rstudio.github.io/distill/website.html
 
 # Learn more about publishing to GitHub Pages at:
 # https://rstudio.github.io/distill/publish_website.html#github-pages
+
+```
+
+```{r car-plot}
+mtcars |>
+    select(mpg, wt) |>
+    ggplot(aes(wt, mpg)) +
+    geom_point()+
+    geom_smooth(method=lm, se=F) +
+    theme_clean()+
+    labs(title="Fuel Efficiency and Weight",
+        subtitle="Heavier cars are less fuel efficienct",
+        y="MPG",
+        x="Weight(1000s of lbs)",
+        caption = "Henderson and Vellerman (2019)"
+    )
 
 ```
 
