--- a/sources_A.Rmd
+++ b/sources_A.Rmd
@@ -9,6 +9,7 @@ author:
     affiliation_url: https://example.com/spacelysprokets
 date: "`r Sys.Date()`"
 output: distill::distill_article
+bibilography : bibilography.bib
 ---
 
 ```{r setup, include=FALSE}
